[gd_scene load_steps=2 format=3 uid="uid://keiih1dm3608"]

[ext_resource type="Script" path="res://Towers/upgrade_screen.gd" id="1_738kv"]

[node name="Control" type="CanvasLayer"]
script = ExtResource("1_738kv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 425.0
offset_bottom = 204.0
color = Color(0.259194, 0.374303, 0.657359, 1)

[node name="Cancel" type="Button" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 218.0
offset_top = 163.0
offset_right = 373.0
offset_bottom = 194.0
text = "Cancel"

[node name="Upgrade" type="Button" parent="Control/ColorRect"]
layout_mode = 2
offset_left = 51.0
offset_top = 163.0
offset_right = 206.0
offset_bottom = 194.0
text = "Purchase upgrade
"

[node name="Label" type="Label" parent="Control/ColorRect"]
layout_mode = 2
offset_left = 154.0
offset_top = 1.0
offset_right = 259.0
offset_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Upgrade info:"

[node name="DamageContainer" type="HBoxContainer" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 30.0
offset_right = 426.0
offset_bottom = 53.0

[node name="Left" type="VBoxContainer" parent="Control/ColorRect/DamageContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Control/ColorRect/DamageContainer/Left"]
layout_mode = 2
text = "Damage:
"

[node name="Right" type="VBoxContainer" parent="Control/ColorRect/DamageContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Stat" type="Label" parent="Control/ColorRect/DamageContainer/Right"]
layout_mode = 2
horizontal_alignment = 2

[node name="RangeContainer" type="HBoxContainer" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 53.0
offset_right = 426.0
offset_bottom = 78.0

[node name="Left" type="VBoxContainer" parent="Control/ColorRect/RangeContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Control/ColorRect/RangeContainer/Left"]
layout_mode = 2
text = "Range:
"

[node name="Right" type="VBoxContainer" parent="Control/ColorRect/RangeContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Stat" type="Label" parent="Control/ColorRect/RangeContainer/Right"]
layout_mode = 2
horizontal_alignment = 2

[node name="EnemiesContainer" type="HBoxContainer" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 3.0
offset_top = 74.0
offset_right = 426.0
offset_bottom = 100.0

[node name="Left" type="VBoxContainer" parent="Control/ColorRect/EnemiesContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Control/ColorRect/EnemiesContainer/Left"]
layout_mode = 2
text = "Damage:
"

[node name="Right" type="VBoxContainer" parent="Control/ColorRect/EnemiesContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Stat" type="Label" parent="Control/ColorRect/EnemiesContainer/Right"]
layout_mode = 2
horizontal_alignment = 2

[node name="FireContainer" type="HBoxContainer" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 96.0
offset_right = 426.0
offset_bottom = 120.0

[node name="Left" type="VBoxContainer" parent="Control/ColorRect/FireContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Control/ColorRect/FireContainer/Left"]
layout_mode = 2
text = "Fire rate:
"

[node name="Right" type="VBoxContainer" parent="Control/ColorRect/FireContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Stat" type="Label" parent="Control/ColorRect/FireContainer/Right"]
layout_mode = 2
horizontal_alignment = 2

[node name="PriceContainer" type="HBoxContainer" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 100.0
offset_top = 127.0
offset_right = 310.0
offset_bottom = 156.0

[node name="Left" type="VBoxContainer" parent="Control/ColorRect/PriceContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Control/ColorRect/PriceContainer/Left"]
layout_mode = 2
text = "Price:
"

[node name="Right" type="VBoxContainer" parent="Control/ColorRect/PriceContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Stat" type="Label" parent="Control/ColorRect/PriceContainer/Right"]
layout_mode = 2
horizontal_alignment = 2

[connection signal="pressed" from="Control/ColorRect/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/ColorRect/Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="Control/ColorRect/Upgrade" to="." method="_on_button_pressed"]
